--- a/style.css
+++ b/style.css
@@ -4,18 +4,18 @@
 }
 
 *{
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
 }
 
 #overview{
     margin: 13%;
     width: 220px;
     height: "auto";
-    position: relative;
+    position: absolute;
     overflow: hidden;
     background: #040218;
-    border-radius: 10PX;
+    border-radius: 15PX;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),0 6px 20px rgba(0, 0, 0, 0.19);
 }
 
@@ -45,13 +45,16 @@
 }
 
 input{
-    margin: 10px 18px;
+    margin: 15px 18px;
     outline: none;
+    content: '';
+    transform: scaleX(1);
+    width: default;
     border-left: 0;
     border-right: 0;
     border-top: 0;
-    border-bottom: 1px solid;
-    font: size 15.5px;
+    border-bottom: 0px solid;
+    font: size 18px;
 }
 
 input[type="checkbox"]{
@@ -59,15 +62,15 @@ input[type="checkbox"]{
 }
 
 input[type="submit"]{
-    width: 100px;
+    width: 80px;
     height: 35px;
     font-size:16px;
-    margin: 20px 15px 15px 75px;
+    margin: 10px 10px 10px 55px;
     padding: 7px;
-    color:#82a0bc;
+    color:#001324;
     background-color: lightcyan;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 #registerForm{
@@ -77,3 +80,96 @@ input[type="submit"]{
 }
 /* ============================================================================= */
 /* ----------------register page------------------------- */
+
+.input-container{
+    width: 250px;
+}
+
+.input-group{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.input-group input{
+    padding: 15px 3rem 15px 15px;
+    width: 100%;
+    background: #040218;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 4px;
+    color: #fff;
+    transition: width 0.8, height 0.8, border-radius 0.8;
+    font-size: 13;
+}
+
+.input-group input{
+    color: #63adf2;
+}
+
+.input-group input:focus{
+    border: 1px solid aqua;
+    box-shadow: #001324;
+}
+
+.input-group .toogle{
+    position: absolute;
+    right: 8px;
+    font-size: 13px;
+    cursor: pointer;
+    user-select: none;
+    z-index: 80;
+}
+
+.input-group .ripple{
+    background: whitesmoke;
+    display: block;
+    position: absolute;
+    height: 22px;
+    width: 22px;
+    border-radius: 40%;
+    right: 8px;
+    transition: all 0.2s;
+    z-index: 1;
+}
+
+.pass-strength{
+    display: flex;
+    align-items: center;
+    margin-top: 4px;
+}
+
+.strength-label{
+    font: size 13px;
+    margin-left: auto;
+}
+
+.strength-percentage{
+    flex: 1;
+    height: 5px;
+    border-radius: 8px;
+    display: block;
+    background: #eee;
+}
+
+.strength-percentage span{
+    display: block;
+    height: 100%;
+    transition: all 0.5s;
+    border-radius: 8px;
+}
+
+.weak{
+    background: crimson;
+    width: 22%;
+}
+
+.average {
+    background: goldenrod;
+    width: 44%;
+}
+
+.strong{
+    background: rgb(1, 181, 1);
+    width: 100%;
+}
